--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ pre{white-space:pre-wrap;word-wrap:break-word;font-size:18px;line-height:1.5;max
 </style>
 </head>
 <body>
-<pre>this is my email for close testing --- utsavrana572@gmail.com
-and this is my email for test flight --- deepanshuranag007@gmail.com </pre>
+<pre> pls check the msg </pre>
 </body>
 </html>
