Update message in index.html with WhatsApp number

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ pre{white-space:pre-wrap;word-wrap:break-word;font-size:18px;line-height:1.5;max
 </style>
 </head>
 <body>
-<pre> pls check the msg </pre>
+<pre> this is my WhatsApp number sir -- +91 9354630932 
+</pre>
 </body>
 </html>
