Fix HTML formatting for WhatsApp number message

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ pre{white-space:pre-wrap;word-wrap:break-word;font-size:18px;line-height:1.5;max
 </style>
 </head>
 <body>
-<pre> this is my WhatsApp number sir -- +91 9354630932 
+<pre> Sorry --- time out --- pls ask for new file 
 </pre>
 </body>
 </html>
